--- a/apps/superduper/src/app/styles.css
+++ b/apps/superduper/src/app/styles.css
@@ -116,3 +116,31 @@
   font-family: freightBig, serif;
   font-weight: 700;
 }
+
+/* From Uiverse.io by Codecite */
+.btn {
+  transition: all 0.3s ease-in-out;
+  font-family: 'Dosis', sans-serif;
+}
+
+.btn {
+  width: 100px;
+  height: 40px;
+  border-radius: 50px;
+  background-image: linear-gradient(135deg, #92c6fe 0%, #3d8bf1 100%);
+  box-shadow: 0 20px 30px -6px rgba(38, 115, 239, 0.5);
+  outline: none;
+  cursor: pointer;
+  border: none;
+  font-size: 18px;
+  color: white;
+}
+
+.btn:hover {
+  transform: translateY(3px);
+  box-shadow: none;
+}
+
+.btn:active {
+  opacity: 0.5;
+}
